Tue Feb 15 21:25:52 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/src/org/opendds/modeling/model/opendds/diagram/dcpslib/edit/parts:

	  svn:ignore auto-generated file.

Tue Feb 15 21:17:48 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/plugin.xml:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.gmfgen:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.gmfgraph:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.gmfmap:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.trace:

          Added label for domainId in Domain figure.

Tue Feb 15 20:45:48 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/tests/CopyTopicQos/CopyTopicQos.opendds:

          Make sure only one pub/sub per topic so sync works.

Tue Feb 15 19:49:58 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/codegen/model/Delegate.cpp:

          Ignore ContentFilteredTopic when not in the build.

Tue Feb 15 20:10:03 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * java/ant/build.properties:
        * java/ant/build.xml:

          Set Java compatibility to 1.5, some build machines don't have 1.6.

        * java/jms/lib/opendds-ant.jar:

          Rebuilt with Java 1.5 compatibility.

Tue Feb 15 18:55:55 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.diagram.datalib:
        * tools/modeling/plugins/org.opendds.modeling.diagram.datalib/icons:
        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib:
        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/icons:
        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/icons/obj16:
        * tools/modeling/plugins/org.opendds.modeling.diagram.policylib: