@@ -1,8 +1,14 @@
+Tue Feb 15 21:31:28 UTC 2011  Adam Mitz  <mitza@ociweb.com>
+
+        * tools/modeling/plugins/org.opendds.modeling.sdk.model.editor/src/org/opendds/modeling/sdk/model/GeneratorSpecification/Generator/ParsedXmlFile.java:
+
+          Retrieve the timestamp on demand instead of attempting to cache it.
+
 Tue Feb 15 21:25:52 UTC 2011  Byron Harris  <harrisb@ociweb.com>
 
         * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/src/org/opendds/modeling/model/opendds/diagram/dcpslib/edit/parts:
 
-	  svn:ignore auto-generated file.
+          svn:ignore auto-generated file.
 
 Tue Feb 15 21:17:48 UTC 2011  Byron Harris  <harrisb@ociweb.com>
 
